# raytracer

./: Boundaries.cpp  CMakeLists.txt  Collision.cpp  Collision.h  Color.cpp  Color.h  Material.h  Matte.cpp  Matte.h  Metal.cpp  Metal.h  Opaque.h  Ray.cpp  Ray.h  Scene.cpp  Scene.h  Sphere.cpp  Sphere.h  Transparent.h  Utility.h  Vec.cpp  Vec.h  Vec3.cpp  Vec3.h  View.cpp  View.h  main.cpp
Core/: Collision.h  Color.cpp  Color.h  Ray.h  Vec.cpp  Vec.h  View.cpp  View.h
Materials/: Light.cpp  Light.h  Material.h  Matte.cpp  Matte.h  Metal.h  Transparent.cpp  Transparent.h
Objects/: Opaque.h  Scene.cpp  Scene.h  Sphere.cpp  Sphere.h  Square.cpp  Square.h
Optimizations/: BoundingBox.cpp  BoundingBox.h  BoundingVolume.cpp  BoundingVolume.h
Textures/: Checkered.cpp  Checkered.h  ImageTexture.cpp  ImageTexture.h  Monochrome.cpp  Monochrome.h  Texture.h
Utility/: Boundaries.cpp  Boundaries.h  Utility.h
